--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "bignumber.js": "^7.2.1",
     "identicon.js": "^2.3.2",
     "lodash": "^4.17.10",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-grid-layout": "^0.16.6",
@@ -19,5 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5"
   }
 }
